# ctara-dhruv-core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE_POLICY.md  README.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/workflows/: core-ci.yml  elixir-bindings.yml  go-bindings.yml  license-compliance.yml  node-bindings.yml  python-wheels.yml  release-unified.yml
bindings/: README.md
bindings/elixir-open/: .gitignore  README.md  mix.exs
bindings/elixir-open/bench/: all_functions.exs
bindings/elixir-open/lib/: ctara_dhruv.ex
bindings/elixir-open/native/dhruv_elixir_nif/: Cargo.toml
bindings/elixir-open/native/dhruv_elixir_nif/src/: lib.rs
bindings/elixir-open/test/: ctara_dhruv_test.exs
bindings/go-open/: README.md  go.mod
bindings/go-open/dhruv/: dasha.go  engine.go  errors.go  extras.go  integration_test.go  jyotish.go  panchang.go  search.go  shadbala.go  tara.go  time.go  types.go
bindings/node-open/: README.md  package-lock.json  package.json
bindings/node-open/examples/: basic.js
bindings/node-open/native/: dhruv_node.cc
bindings/node-open/scripts/: build-addon.mjs
bindings/node-open/src/: dasha.js  engine.js  errors.js  extras.js  index.js  jyotish.js  native.js  panchang.js  search.js  shadbala.js  status.js  tara.js  time.js
bindings/node-open/test/: dasha_tara.test.js  engine.test.js  helpers.js
bindings/python-open/: MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python-open/scripts/: prepare_native_lib.py
bindings/python-open/src/ctara_dhruv/: __init__.py  _cdef.py  dasha.py  ephemeris.py  kundali.py  panchang.py  search.py  shadbala.py  types.py  vedic.py
bindings/python-open/tests/: conftest.py  test_ephemeris.py  test_panchang.py  test_search.py  test_time.py  test_vedic.py
crates/dhruv_cli/: Cargo.toml
crates/dhruv_cli/benches/: cli_bench.rs
crates/dhruv_cli/src/: main.rs
crates/dhruv_config/: Cargo.toml
crates/dhruv_config/src/: lib.rs
crates/dhruv_core/: Cargo.toml
crates/dhruv_core/benches/: query_bench.rs
crates/dhruv_core/src/: lib.rs
crates/dhruv_core/tests/: edge_epochs.rs  engine_integration.rs  horizons_golden.rs
crates/dhruv_ffi_c/: Cargo.toml
crates/dhruv_ffi_c/benches/: ffi_bench.rs
crates/dhruv_ffi_c/include/: dhruv.h
crates/dhruv_ffi_c/src/: lib.rs
crates/dhruv_ffi_c/tests/: ffi_integration.rs
crates/dhruv_frames/: Cargo.toml
crates/dhruv_frames/benches/: frames_bench.rs
crates/dhruv_frames/src/: invariable.rs  lib.rs  nutation.rs  obliquity.rs  precession.rs  spherical.rs
crates/dhruv_rs/: Cargo.toml
crates/dhruv_rs/benches/: rs_bench.rs
crates/dhruv_rs/src/: amsha.rs  context.rs  convenience.rs  date.rs  error.rs  global.rs  lib.rs  ops.rs
crates/dhruv_rs/tests/: integration.rs
crates/dhruv_search/: Cargo.toml
crates/dhruv_search/benches/: search_bench.rs
crates/dhruv_search/src/: conjunction.rs  conjunction_types.rs  dasha.rs  eclipse.rs  eclipse_types.rs  error.rs  grahan.rs  grahan_types.rs  jyotish.rs  jyotish_types.rs  lib.rs  lunar_phase.rs  lunar_phase_types.rs  operations.rs  panchang.rs  panchang_types.rs  sankranti.rs  sankranti_types.rs  search_util.rs  stationary.rs  stationary_types.rs
crates/dhruv_search/tests/: bindus_golden.rs  conjunction_golden.rs  dasha_test.rs  drishti_golden.rs  eclipse_golden.rs  grahan_golden.rs  invariable_plane_test.rs  jhora_golden.rs  jyotish_golden.rs  lunar_phase_golden.rs  panchang_golden.rs  sankranti_golden.rs  shadbala_test.rs  tropical_compare.rs  (+2 more)
crates/dhruv_tara/: Cargo.toml
crates/dhruv_tara/benches/: tara_bench.rs
crates/dhruv_tara/src/: apparent.rs  catalog.rs  config.rs  error.rs  galactic.rs  lib.rs  position.rs  propagation.rs  tara_id.rs
crates/dhruv_tara/tests/: position_golden.rs
crates/dhruv_time/: Cargo.toml
crates/dhruv_time/benches/: time_bench.rs
crates/dhruv_time/data/: smh2016_reconstruction.tsv
crates/dhruv_time/src/: delta_t.rs  diagnostics.rs  eop.rs  error.rs  julian.rs  lib.rs  lsk.rs  scales.rs  sidereal.rs  utc_time.rs
crates/dhruv_time/tests/: lsk_integration.rs
crates/dhruv_vedic_base/: Cargo.toml
crates/dhruv_vedic_engine/: Cargo.toml
crates/dhruv_vedic_engine/src/: lib.rs  riseset.rs
crates/dhruv_vedic_math/: Cargo.toml
crates/dhruv_vedic_math/src/: bhavabala.rs  lib.rs  upagraha.rs
crates/dhruv_vedic_ops/: Cargo.toml
crates/eph_cli/: Cargo.toml
crates/eph_core/: Cargo.toml
crates/eph_ffi_c/: Cargo.toml
crates/eph_frames/: Cargo.toml
crates/eph_time/: Cargo.toml
crates/eph_vedic_base/: Cargo.toml
crates/jpl_kernel/: Cargo.toml
crates/jpl_kernel/benches/: eval_bench.rs
crates/jpl_kernel/src/: chebyshev.rs  daf.rs  error.rs  lib.rs  spk.rs
crates/jpl_kernel/tests/: kernel_integration.rs
docs/: C_ABI_REFERENCE.md  FFI_VEDIC_DESIGN.md  PHASE1_PLAN.md  RELEASE_NOTES.md  SIMPLIFY_RISESET_DESIGN.md  SURFACE_DISCREPANCIES.md  TIME_RUNTIME_APIS.md  UNIFIED_OPERATIONS_SPEC.md  VEDIC_BASE_DESIGN.md  api_contract.md  architecture.md  clean_room_arudha.md  clean_room_ayanamsha.md  clean_room_bhava.md  clean_room_bhavabala.md  clean_room_conjunction.md  clean_room_dasha.md  clean_room_delta_t.md  clean_room_drishti.md  clean_room_eclipse.md  clean_room_elixir_wrapper.md  clean_room_go_wrapper.md  clean_room_grahan.md  clean_room_invariable_plane.md  clean_room_lunar_nodes.md  clean_room_node_wrapper.md  clean_room_panchang.md  clean_room_precession_vondrak.md  clean_room_riseset.md  clean_room_special_lagnas.md  clean_room_tara.md  clean_room_tithi_karana_yoga.md  cli_reference.md  config_layering_spec.md  numeric_error_budget.md  release_distribution.md  rust_wrapper.md
docs/end_user/: README.md
kernels/: README.md
kernels/data/: hgca_tara.json
scripts/ci/: build_local_native_binaries.sh  check_abi_docs.sh  check_cdylib_artifact.sh  check_release_versions.py  license_gate.sh  package_release_asset.py  publish_rust_workspace.sh  smoke_cabi_version.c
scripts/kernels/: fetch_kernels.sh
scripts/time/: import_smh2016_reconstruction.sh  verify_time_assets.sh
testdata/horizons_golden/: README.md  vectors.json
(+111 files in other folders)
