[workspace]
members = [
  "crates/jpl_kernel",
  "crates/eph_time",
  "crates/eph_frames",
  "crates/eph_core",
  "crates/eph_vedic_base",
  "crates/eph_ffi_c",
  "crates/eph_cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
