[package]
name = "dhruv_core"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
jpl_kernel = { path = "../jpl_kernel" }
dhruv_time = { path = "../dhruv_time" }
dhruv_frames = { path = "../dhruv_frames" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_bench"
harness = false
