[package]
name = "dhruv_core"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Core ephemeris engine for ctara-dhruv-core"
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"

[dependencies]
jpl_kernel = { path = "../jpl_kernel", version = "0.1.0" }
dhruv_time = { path = "../dhruv_time", version = "0.1.0" }
dhruv_frames = { path = "../dhruv_frames", version = "0.1.0" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_bench"
harness = false
