[package]
name = "dhruv_ffi_c"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Canonical C ABI for ctara-dhruv-core"
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"
keywords = ["ephemeris", "astronomy", "ffi", "vedic"]
categories = ["api-bindings", "science"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
dhruv_core = { path = "../dhruv_core", version = "0.1.0" }
dhruv_config = { path = "../dhruv_config", version = "0.1.0" }
dhruv_time = { path = "../dhruv_time", version = "0.1.0" }
dhruv_frames = { path = "../dhruv_frames", version = "0.1.0" }
dhruv_vedic_base = { path = "../dhruv_vedic_base", version = "0.1.0" }
dhruv_search = { path = "../dhruv_search", version = "0.1.0" }
dhruv_vedic_ops = { path = "../dhruv_vedic_ops", version = "0.1.0" }
dhruv_tara = { path = "../dhruv_tara", version = "0.1.0" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ffi_bench"
harness = false
