[package]
name = "dhruv_frames"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Frame, precession, and nutation helpers for ctara-dhruv-core"
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "frames_bench"
harness = false
