[package]
name = "dhruv_tara"
description = "Fixed star positions with proper motion propagation"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"

[dependencies]
dhruv_time = { path = "../dhruv_time", version = "0.1.0" }
dhruv_frames = { path = "../dhruv_frames", version = "0.1.0" }

[dev-dependencies]
criterion = { workspace = true }
dhruv_vedic_base = { path = "../dhruv_vedic_base", version = "0.1.0" }

[[bench]]
name = "tara_bench"
harness = false

[lints]
workspace = true
