[package]
name = "dhruv_time"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Time conversion and Delta-T utilities for ctara-dhruv-core"
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "time_bench"
harness = false
