[package]
name = "dhruv_vedic_engine"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Engine-backed Vedic computations for ctara-dhruv-core"
repository = "https://github.com/Mr-Pental21/ctara-dhruv-core"
homepage = "https://github.com/Mr-Pental21/ctara-dhruv-core"

[dependencies]
dhruv_core = { path = "../dhruv_core", version = "0.1.0" }
dhruv_time = { path = "../dhruv_time", version = "0.1.0" }
dhruv_frames = { path = "../dhruv_frames", version = "0.1.0" }
dhruv_tara = { path = "../dhruv_tara", version = "0.1.0" }
dhruv_vedic_math = { path = "../dhruv_vedic_math", version = "0.1.0" }

[dev-dependencies]
criterion = { workspace = true }
